Done styling the project page from shared layout

--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -426,7 +426,7 @@
     </section>
 
     <footer>
-      <nav>
+      <nav class="footer-nav">
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
