--- a/app/shared/templates/shared_layout1.html
+++ b/app/shared/templates/shared_layout1.html
@@ -14,7 +14,7 @@
     -->
     <link
       rel="icon"
-      href="{{ url_for('shared.static', filename='images/favicon1.png') }}"
+      href="{{ url_for('shared.static', filename='images/favicon.png') }}"
       type="image/png"
     />
     <link
