Updated the homepage with project2

--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -249,23 +249,23 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Sleep Disorder Prediction</h2>
 
             <p class="intro">
-              Scraping Data from Glassdoor to estimate salaries of ...
+              Early risk identification Insomnia and Sleep Apnea..
             </p>
-            <p class="tag">Python, SQL, Power BI</p>
+            <p class="tag">Decision Tree, Random Forest, Flask, Docker, Azure</p>
 
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn btn-reduced"
-                onclick="window.open('https://www.github.com/', '_blank');"
+                onclick="window.open('https://github.com/Aftabby/sleep-disorder-project', '_blank');"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn btn-reduced"
-                onclick="window.open('https://www.github.com/', '_blank');"
+                onclick="window.open('https://www.aftabby.com/sleep-disorder', '_blank');"
               >
                 Details
               </button>
