--- a/app/projects/ds_salary/templates/project1.html
+++ b/app/projects/ds_salary/templates/project1.html
@@ -35,7 +35,7 @@ Also:
 rel="stylesheet"
 href="{{ url_for('ds_salary.static', filename='css/style.css') }}"
 />
-{%% endblock %}
+{% endblock %}
 
 {% block header %}
     <h1 class="main-title"> Data Scientists Salary Prediction </h1>
