--- a/app/projects/sleep_disorder/templates/project2.html
+++ b/app/projects/sleep_disorder/templates/project2.html
@@ -39,10 +39,10 @@ href="{{ url_for('sleep_disorder.static', filename='css/style.css') }}"
 rel="stylesheet"
 href="{{ url_for('sleep_disorder.static', filename='css/mediaqueries.css') }}"
 />
-{%% endblock %}
+{% endblock %}
 
 {% block header %}
-    <h1 class="main-title">Sleep Disorder Prediction</h1>
+    <h1>Sleep Disorder Prediction</h1>
     <p>Predict sleep disorders using individual lifestyle and medical data for early risk identification and intervention.</p>
 {% endblock %}
 
