--- a/app/projects/sleep_disorder/static/css/style.css
+++ b/app/projects/sleep_disorder/static/css/style.css
@@ -1,21 +1,8 @@
-body {
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  margin: 0;
-  padding: 0;
-}
-
 header {
   background: #333;
   color: #fff;
   padding: 1rem 0;
   text-align: center;
-}
-
-section {
-  padding: 2rem;
-  max-width: 800px;
-  margin: 0 auto;
 }
 
 h1,
@@ -29,14 +16,6 @@ h3 {
   padding: 1rem;
   border-radius: 5px;
   overflow-x: auto;
-}
-
-footer {
-  background: #333;
-  color: #fff;
-  text-align: center;
-  padding: 1rem 0;
-  margin-top: 2rem;
 }
 
 .btn {
@@ -150,8 +129,18 @@ img {
   overflow-x: auto;
 }
 
-.main-title {
-  color: #fff;
+ul,
+ol {
+  list-style-position: inside;
+  margin: 1rem;
+}
+li {
+  margin: 0.5rem 0;
+}
+
+h4 {
+  margin-top: 1.5rem;
+  margin-bottom: 0rem;
 }
 
 .graph-container {
