Added thrird project

--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -279,23 +279,23 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">E-Commerce Delivery Prediction</h2>
 
             <p class="intro">
-              Scraping Data from Glassdoor to estimate salaries of ...
+              Whether a product will be delivered on time or not..
             </p>
-            <p class="tag">Python, SQL, Power BI</p>
+            <p class="tag">Logistic Regression, KNN Classifier, Plotly, Jinja, Power BI</p>
 
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn btn-reduced"
-                onclick="window.open('https://www.github.com/', '_blank');"
+                onclick="window.open('https://www.github.com/Aftabby/ecomm-delivery-project', '_blank');"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn btn-reduced"
-                onclick="window.open('https://www.github.com/', '_blank');"
+                onclick="window.open('https://www.aftabby.com/ecomm-delivery', '_blank');"
               >
                 Details
               </button>
